--- a/red_coffee.css
+++ b/red_coffee.css
@@ -493,15 +493,29 @@ font-size: 0.9516837481698389vw;
    .nav{
       margin-left: 38vw;
    }
-  
-   
-   .whym{
-      padding-bottom: 50vw;
-      padding-top: 40vw;
+   .where p {
+      font-size: 2vw;
+      text-align: left;
+      margin-left: -4vw;
    }
-  
-   .where{
-      padding-top: 40vw;
+   .whym p{
+    text-align:start;
+      font-size:2vw;
+   }
+   .sad{
+    margin-left: 20vw;  
+   }
+   .wc{
+      margin-left: 8vw;
+   }
+   .padd{
+      margin-right: 1vw;
+   }
+   .cf{
+      margin-left: 1vw;
+   }
+   .fc{
+      margin-right: 10vw;
    }
    #toggle{
       display: none;
@@ -638,6 +652,18 @@ font-size: 0.9516837481698389vw;
   } 
    }
    @media screen and (min-width:667px) and (max-width:1024px){
+      .nav_link{
+         margin-left: -2vw;
+         font-size: 2.3vw;
+         margin-top: -7vw;
+         padding-top: -13vw;
+       }
+      .nav{
+         padding-top: 3vw;
+         margin-left: 35vw;
+         padding-bottom: 1.1vw;
+         
+      }
       .coffee p{
          margin-left: -18vw;
          font-size:4vw;
