--- a/home.css
+++ b/home.css
@@ -35,7 +35,7 @@ h1,h2,h3,h4,h5,h6{
 @keyframes eye{
     20%{background-image: url(koo.jpg);}
     45%{background-image: url(ss.jpg);}
-     65%{background-image: url(ph.jpeg);}
+     65%{background-image: url(https://avatars.mds.yandex.net/get-altay/4335161/2a00000179a759b5e135f0a43a169c749ce3/XXXL);}
 }
 .intro_inner{
     width: 100%;
