--- a/red_coffee.css
+++ b/red_coffee.css
@@ -652,17 +652,16 @@ font-size: 0.9516837481698389vw;
   } 
    }
    @media screen and (min-width:667px) and (max-width:1024px){
-      .nav_link{
-         margin-left: -2vw;
-         font-size: 2.3vw;
-         margin-top: -7vw;
-         padding-top: -13vw;
-       }
+      .price__currency{
+
+         font-size: 3vw;
+      }
+      
+      
       .nav{
          padding-top: 3vw;
          margin-left: 35vw;
          padding-bottom: 1.1vw;
-         
       }
       .coffee p{
          margin-left: -18vw;
@@ -683,8 +682,9 @@ font-size: 0.9516837481698389vw;
        font-size:4vw ;
        }
        .nav_link{
-         margin-left: -2vw;
-         font-size: 2.3vw;
+         margin-left: 4vw;
+         font-size: 1.5vw;
+         
          margin-top: -7vw;
          padding-top: -13vw;
        }
@@ -697,18 +697,34 @@ font-size: 0.9516837481698389vw;
        
        .club{
          padding-top: 25vw;
+         margin-left: 25vw;
        }
+       
        .main{
          display: inline-block;
        }
        .product-list p{
          font-size: 10vw;
        }
+       .h4{
+         font-size: 3vw;
+       }
+      .h5{
+         font-size: 3vw;
+      }
+      .total-price{
+         font-size: 3vw;
+      }
+      .rouble{
+         font-size: 3vw;
+      }
+       .delivery-cost{font-size: 3vw;}
        .class{margin-top: 2vw;}
        .product-list h3{
          font-size: 5vw;
        }
        .button{
+         padding-top: 1.5vw;
          font-size: 4vw;
          height: 5vw;
        }
@@ -727,7 +743,7 @@ font-size: 0.9516837481698389vw;
        }
        .main3{
          display: inline-block;
-         margin-left: 0.1vw;
+         margin-left: -3vw;
        }
        .main4{
          display: inline-block;
@@ -784,4 +800,7 @@ font-size: 0.9516837481698389vw;
      .gmail{
        margin-left: -20vw;
      } 
+     .btn{
+      font-size: 2vw;
+     }
       }
