--- a/learn_more.css
+++ b/learn_more.css
@@ -49,7 +49,7 @@ h1,h2,h3,h4,h5,h6{
       justify-content: center;
       width: 100%;
       height: 100vh;
-      background-image: url(ph.jpg) center no-repeat;
+      background: url("ss.jpg") center no-repeat;
       animation: eye 30s infinite;
       animation-iteration-count: infinite linear;
       -webkit-background-size:cover ;
@@ -58,7 +58,7 @@ h1,h2,h3,h4,h5,h6{
    @keyframes eye{
       20%{background-image: url(koo.jpg);}
       45%{background-image: url(ss.jpg);}
-       65%{background-image: url(ph.jpeg);}
+       65%{background-image: url(https://avatars.mds.yandex.net/get-altay/4335161/2a00000179a759b5e135f0a43a169c749ce3/XXXL);}
    }
    .intro_inner{
       width: 100%;
