--- a/contacts.css
+++ b/contacts.css
@@ -148,6 +148,40 @@ body{
     background-color: rgb(242, 247, 252);
     color: rgba(10, 10, 10, 0.753);
     
+   
+ }
+ .dropdown {
+   position: relative;
+   display: inline-block;
+   cursor: pointer;
+ }
+ 
+ /* Dropdown Content (Hidden by Default) */
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #f9f9f9c5;
+   min-width: 80px;
+   max-height: 180px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+ }
+ 
+ /* Links inside the dropdown */
+ .dropdown-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+   font-size: 12px;
+ }
+ 
+ /* Change color of dropdown links on hover */
+ .dropdown-content a:hover {background-color: #f1f1f1b4}
+ 
+ /* Show the dropdown menu on hover */
+ .dropdown:hover .dropdown-content {
+   display: block;
  }
  
  .div{
