--- a/isa.css
+++ b/isa.css
@@ -669,24 +669,151 @@
  
    }
  
+   @media screen and (min-width:667px) and (max-width:1024px){
+      .coffee p{
+         margin-left: -18vw;
+         font-size:4vw;
+      }
+      .query{
+         margin-left: -14vw;
+         font-size: 3vw;
+      }
+   
+       .header_inner{
+         display: inline;
+       }
+       .container{
+         margin-bottom: -6vw;
+       }
+       .card-title{
+       font-size:4vw ;
+       }
+       .nav_link{
+         margin-left: -2vw;
+         font-size: 2.3vw;
+         margin-top: -7vw;
+         padding-top: -13vw;
+       }
+       #emails{
+         font-size: 4vw;
+       }
+       #confirm_emails{
+         font-size: 4vw;
+       }
+       
+       .club{
+         padding-top: 25vw;
+       }
+       .main{
+         display: inline-block;
+       }
+       .product-list p{
+         font-size: 10vw;
+       }
+       .class{margin-top: 2vw;}
+       .product-list h3{
+         font-size: 5vw;
+       }
+       .button{
+         font-size: 4vw;
+         height: 5vw;
+       }
+       .small{
+         font-size:4vw;
+       }
+       .product-item{
+         width: 60vw;
+         align-items: center;
+         margin-left: 13vw;
+       }
+      
+       .main2{
+         display: inline-block;
+         
+       }
+       .main3{
+         display: inline-block;
+         margin-left: 0.1vw;
+       }
+       .main4{
+         display: inline-block;
+         margin-left: -6vw;
+       }
+       .footer{
+         height: 400px;
+      }
+      .logo_image_footer {
+         margin-top: -20px;
+         margin-left: 230px;
+      }
+   
+      .column_1_footer {
+         margin-top: 80px;
+         margin-right: 300px;
+      }
+   
+      .column_2_footer {
+         margin-top: 80px;
+       
+      }
+   
+      .column_3_footer {
+         text-align: center;
+         margin-top:50px;
+         margin-left: 400px;
+      }
+   
+      .copyright_footer div {
+         margin-left: 120px;
+         margin-top: -10px;
+      }
+         
+      .popup-content {
+         width: 400px;
+         margin-top: -60px;
+      }
+   
+      #username {
+         margin-left: 90px;
+      }
+   
+      #password {
+         margin-left: 90px;
+      }
+     .hoodie{
+       margin-left: -10vw;
+       margin-top: -2vw;
+     }
+     .gmail{
+       margin-left: -20vw;
+     } 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+     .price__currency{
+      font-size: large;
+     }
+     .colss{
+      font-size: large;
+     }
+     .choice{
+      font-size: large;
+     }
+     .card-title{
+      font-size: large;
+     }
+     .Pusto{
+      background-color: #444444;
+      background-size: 10.8301610541727673vw;
+      color: #fafafa;
+      height: 8.8301610541727673vw;
+      font-size: 20px;
+     }
+     .card-total ,.h4, .delivery-cost, .h5, .total-price, .rouble{
+      font-size: large;
+     }
+     .card-total .small{
+      font-size: smaller;
+     }
+      }
 
 
 
