--- a/red_coffee.css
+++ b/red_coffee.css
@@ -572,8 +572,9 @@ font-size: 0.9516837481698389vw;
       font-size: 5vw;
     }
     .button{
+      padding-top: 1.5vw;
       font-size: 4vw;
-      height: 5vw;
+      height: 6vw;
     }
     .small{
       font-size:4vw;
