--- a/red_coffee.css
+++ b/red_coffee.css
@@ -487,13 +487,39 @@ font-size: 0.9516837481698389vw;
  #confirm_emails{
 font-size: 0.9516837481698389vw;
  }
- 
+ #toggle{
+	display: none;
+ }
+ .navs{
+	float: left;
+ }
+ .togglesss{
+	margin: 20px 0 0 20px;
+	font-size: 30px;
+	display: none;
+ }
  
 
  @media(max-width:667px){
-   .nav{
-      margin-left: 38vw;
-   }
+   .togglesss{
+		display: block;
+		cursor: pointer;
+	 }.header{
+      opacity: 0.9;
+    }
+	 .nav{
+		display: block;
+		text-align: center;
+		padding-bottom: 220px;
+		padding-top: 80px;
+		font-size: 50px;
+	 }
+	 #toggle:checked + .container{
+		display: none;
+	 } 
+    .header_logo{
+      opacity: 0;
+    }
    .where p {
       font-size: 2vw;
       text-align: left;
@@ -546,7 +572,7 @@ font-size: 0.9516837481698389vw;
     }
     .nav_link{
       margin-left: -2vw;
-      font-size: 2.3vw;
+      font-size: 15vw;
       margin-top: -7vw;
       padding-top: -13vw;
     }
@@ -654,11 +680,25 @@ font-size: 0.9516837481698389vw;
       }
       
       
-      .nav{
-         padding-top: 3vw;
-         margin-left: 35vw;
-         padding-bottom: 1.1vw;
-      }
+      .togglesss{
+         display: block;
+         cursor: pointer;
+       }.header{
+         opacity: 0.9;
+       }
+       .nav{
+         display: block;
+         text-align: center;
+         padding-bottom: 305px;
+         padding-top: 80px;
+         font-size: 50px;
+       }
+       #toggle:checked + .container{
+         display: none;
+       } 
+       .header_logo{
+         opacity: 0;
+       }
       .coffee p{
          margin-left: -18vw;
          font-size:4vw;
@@ -679,9 +719,8 @@ font-size: 0.9516837481698389vw;
        }
        .nav_link{
          margin-left: 4vw;
-         font-size: 1.5vw;
-         
          margin-top: -7vw;
+         font-size: 15vw;
          padding-top: -13vw;
        }
        #emails{
@@ -768,8 +807,6 @@ font-size: 0.9516837481698389vw;
    
       .column_3_footer {
        text-align: center;
-         margin-top:50px;
-         margin-left: 120px;
       }
    
       .copyright_footer {
