--- a/isa.css
+++ b/isa.css
@@ -679,20 +679,15 @@
          font-size: 3vw;
       }
    
-       .header_inner{
-         display: inline;
-       }
-       .container{
-         margin-bottom: -6vw;
-       }
+     
        .card-title{
        font-size:4vw ;
        }
        .nav_link{
          margin-left: -2vw;
-         font-size: 2.3vw;
+         font-size: 12vw;
          margin-top: -7vw;
-         padding-top: -13vw;
+         padding-top: 5vw;
        }
        #emails{
          font-size: 4vw;
@@ -742,30 +737,31 @@
        .footer{
          height: 400px;
       }
-      .logo_image_footer {
+   
+      .logo_footer {
          margin-top: -20px;
-         margin-left: 230px;
+         margin-left: 190px;
       }
    
       .column_1_footer {
+         margin-left: -400px;
+         margin-right: 45px;
          margin-top: 80px;
-         margin-right: 300px;
       }
    
       .column_2_footer {
+       margin-left: 230px;
          margin-top: 80px;
        
       }
    
       .column_3_footer {
-         text-align: center;
-         margin-top:50px;
-         margin-left: 400px;
+       text-align: center;
       }
    
-      .copyright_footer div {
-         margin-left: 120px;
-         margin-top: -10px;
+      .copyright_footer {
+         margin-left: 150px;
+         margin-top: 295px;
       }
          
       .popup-content {
@@ -780,6 +776,7 @@
       #password {
          margin-left: 90px;
       }
+      
      .hoodie{
        margin-left: -10vw;
        margin-top: -2vw;
@@ -813,6 +810,31 @@
      .card-total .small{
       font-size: smaller;
      }
+
+     .togglesss{
+		display: block;
+		cursor: pointer;
+	 }
+	 .nav{
+		display: block;
+		text-align: center;
+		padding-bottom: 100px;
+      padding-top: 10px;
+		font-size: 0px;
+	 }
+	 #toggle:checked + .container{
+		display: none;
+	 } 
+	 .header{
+		background-color:  rgb(110, 47, 47);
+		opacity: 0.9;
+	 }
+	 .header_logo{
+		display: none;
+	 } 
+    .button{
+      padding-top: 14px;
+    }
       }
 
 
@@ -849,69 +871,3 @@
 
 
 
-@media screen and (min-width:667px) and (max-width:1024px){
-   .imgintro{
-      width: 95.1683748169839vw;
-      height: 100vh;
-   }
-   .imgintro1{
-      width: 98.82869692532942vw;
-      height: 20vh;
-   }
-   .imgintro2{
-      width: 98.82869692532942vw;
-      height: 20vh;
-   }
-   .qr .spacing{
-      margin-left: 80px;
-   }
-   .qr .xxxx{
-display: none;
-   }
-   .qr .colortext{
-      display: none;
-   }
-   /*FOOTER*/
-	.footer {
-		height: 400px;
-	}
-
-	.logo_footer {
-		margin-top: -20px;
-		margin-left: 190px;
-	}
-
-	.column_1_footer {
-		margin-left: -420px;
-		margin-right: 45px;
-		margin-top: 80px;
-	}
-
-	.column_2_footer {
-		margin-top: 80px;
-	}
-
-	.column_3_footer {
-		margin-top: 80px;
-		margin-left: -155px;
-	}
-
-	.copyright_footer {
-		margin-left: 150px;
-		margin-top: 295px;
-	}
-
-	/*REGISTRATON*/
-	.popup-content {
-		width: 400px;
-		margin-top: -60px;
-	}
-
-	#username {
-		margin-left: 90px;
-	}
-
-	#password {
-		margin-left: 90px;
-	}
-}
