--- a/red_coffee.css
+++ b/red_coffee.css
@@ -813,6 +813,7 @@ font-size: 0.9516837481698389vw;
    
       .column_3_footer {
        text-align: center;
+       margin-left: 6vw;
       }
    
       .copyright_footer {
